# cborcpp

./: .travis.yml  CMakeLists.txt  README.md
src/: cbor.h  cborprivate.h  cborreader.cpp  cborreader.h  cborvalue.cpp  cborvalue.h  cborwriter.cpp  cborwriter.h  value.cpp  value.h
tests/: main.cpp
